--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jsz-vue-gallery": "^0.1.2",
     "register-service-worker": "^1.7.1",
     "v-video-embed": "^1.0.7",
     "vue": "^2.6.11",
