--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^7.19.1",
     "jsz-vue-gallery": "^0.1.2",
     "register-service-worker": "^1.7.1",
     "v-video-embed": "^1.0.7",
@@ -17,7 +18,8 @@
     "vue-instagram-embed": "^1.0.0",
     "vue-router": "^3.2.0",
     "vue-tweet-embed": "^2.4.0",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
