--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "yarn build && next export"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "next": "12.1.6",
     "react": "18.1.0",
